Moved scss modules to css modules

--- a/nunjucks/images.njk
+++ b/nunjucks/images.njk
@@ -24,7 +24,7 @@
     <div class="section scrollspy" id="responsive" data-name="Responsive">
         <h1 class="blue-text">Responsive</h1>
         <div data-syntax="html">
-            <img src="dist/img/sample-1.jpg" alt="Responsive Image" class="responsive-img">
+            <img src="https://picsum.photos/1376/720" alt="Responsive Image" class="responsive-img">
         </div>
     </div>
 
@@ -35,7 +35,7 @@
     <div class="section scrollspy" id="thumbnail" data-name="Thumbnail">
         <h1 class="blue-text">Thumbnail</h1>
         <div data-syntax="html">
-            <img src="dist/img/sample-2.jpg" alt="Thumbnail" class="thumbnail" width="200px">
+            <img src="https://picsum.photos/200" alt="Thumbnail" class="thumbnail">
         </div>
     </div>
 
@@ -57,7 +57,7 @@
     <div class="section scrollspy" id="rounded" data-name="Rounded">
         <h1 class="blue-text">Rounded</h1>
         <div data-syntax="html">
-            <img src="dist/img/sample-3.jpg" alt="Rounded" class="rounded" width="300px">
+            <img src="https://picsum.photos/500/300" alt="Rounded" class="rounded">
         </div>
     </div>
 {% endblock content %}
