--- a/nunjucks/lists.njk
+++ b/nunjucks/lists.njk
@@ -13,7 +13,10 @@
                 <li class="divider"></li>
                 <li class="collection-item active">I am Active</li>
                 <li class="collection-item waves-effect">Cool Waves Effect</li>
-                <li class="collection-item">I am a classic</li>
+                <li class="collection-item">
+                    <i class="material-icons">add</i>
+                    I am a Classic
+                </li>
             </ul>
         </div>
 
