--- a/nunjucks/partials/navbar.html
+++ b/nunjucks/partials/navbar.html
@@ -7,12 +7,12 @@
         <ul class="navbar-right">
             <li class="nav-item">
                 <a href="https://github.com/TheComputerM/empyreal">
-                    <img src="dist/img/github.svg" alt="github" style="width:24px;vertical-align:middle"/>
+                    <img src="dist/img/github.svg" alt="github" style="width:24px;vertical-align:middle" />
                 </a>
             </li>
             <li class="nav-item">
                 <a href="https://github.com/TheComputerM/empyreal/stargazers">
-                    <img src="dist/img/star.svg" alt="github" style="width:24px;vertical-align:middle"/>
+                    <img src="dist/img/star.svg" alt="github" style="width:24px;vertical-align:middle" />
                 </a>
             </li>
         </ul>
@@ -20,17 +20,20 @@
 </div>
 
 <div class="sidenav" id="main-sidenav">
-    <ul class="nav-items">
-        <li class="nav-item justify-content-center waves-effect">
-            Empyreal
+
+    <div class="nav flex-column justify-content-center">
+        <li class="nav-item waves-effect center-align">
+            <h4>Empyreal</h4>
         </li>
-        <div class="text-field m-5">
-            <input type="text" id="components-search" class="autocomplete">
-            <label for="#components-search">Search</label>
-        </div>
+    </div>
+    <div class="text-field m-5">
+        <input type="text" id="components-search" class="autocomplete">
+        <label for="#components-search">Search</label>
+    </div>
+    <div class="nav flex-column">
         <a href="index.html" class="nav-item black-text">Home</a>
         <a href="get_started.html" class="nav-item black-text">Get Started</a>
-    </ul>
+    </div>
     <ul class="collapsible m-0" id="main-collapsible" style="box-shadow:none">
         <li>
             <div class="collapsible-header">
@@ -39,11 +42,11 @@
             <div class="collapsible-body">
                 <ul class="nav flex-column">
                     {% for item in utilities %}
-                        {% if title == item %}
-                            <a class="nav-item active" href="{{ item | lower | replace(" ", "_")}}.html">{{ item }}</a>
-                        {% else %}
-                            <a class="nav-item" href="{{ item | lower | replace(" ", "_")}}.html">{{ item }}</a>
-                        {% endif %}
+                    {% if title == item %}
+                    <a class="nav-item active" href="{{ item | lower | replace(" ", "_")}}.html">{{ item }}</a>
+                    {% else %}
+                    <a class="nav-item" href="{{ item | lower | replace(" ", "_")}}.html">{{ item }}</a>
+                    {% endif %}
                     {% endfor %}
                 </ul>
             </div>
@@ -55,13 +58,13 @@
             <div class="collapsible-body">
                 <ul class="nav flex-column">
                     {% for component in content %}
-                        {% if title == component %}
-                            <a class="nav-item active" href="{{ component | lower | replace(" ", "_")}}.html">
-                                {{ component }}
-                            </a>
-                        {% else %}
-                            <a class="nav-item" href="{{ component | lower | replace(" ", "_")}}.html">{{ component }}</a>
-                        {% endif %}
+                    {% if title == component %}
+                    <a class="nav-item active" href="{{ component | lower | replace(" ", "_")}}.html">
+                        {{ component }}
+                    </a>
+                    {% else %}
+                    <a class="nav-item" href="{{ component | lower | replace(" ", "_")}}.html">{{ component }}</a>
+                    {% endif %}
                     {% endfor %}
                 </ul>
             </div>
@@ -73,13 +76,13 @@
             <div class="collapsible-body">
                 <ul class="nav flex-column">
                     {% for component in components %}
-                        {% if title == component %}
-                            <a class="nav-item active" href="{{ component | lower | replace(" ", "_")}}.html">
-                                {{ component }}
-                            </a>
-                        {% else %}
-                            <a class="nav-item" href="{{ component | lower | replace(" ", "_")}}.html">{{ component }}</a>
-                        {% endif %}
+                    {% if title == component %}
+                    <a class="nav-item active" href="{{ component | lower | replace(" ", "_")}}.html">
+                        {{ component }}
+                    </a>
+                    {% else %}
+                    <a class="nav-item" href="{{ component | lower | replace(" ", "_")}}.html">{{ component }}</a>
+                    {% endif %}
                     {% endfor %}
                 </ul>
             </div>
@@ -91,15 +94,15 @@
             <div class="collapsible-body">
                 <ul class="nav flex-column">
                     {% for component in forms %}
-                        {% if title == component %}
-                            <a class="nav-item active" href="{{ component | lower | replace(" ", "_")}}.html">
-                                {{ component }}
-                            </a>
-                        {% else %}
-                            <a class="nav-item" href="{{ component | lower | replace(" ", "_")}}.html">
-                                {{ component }}
-                            </a>
-                        {% endif %}
+                    {% if title == component %}
+                    <a class="nav-item active" href="{{ component | lower | replace(" ", "_")}}.html">
+                        {{ component }}
+                    </a>
+                    {% else %}
+                    <a class="nav-item" href="{{ component | lower | replace(" ", "_")}}.html">
+                        {{ component }}
+                    </a>
+                    {% endif %}
                     {% endfor %}
                 </ul>
             </div>
