--- a/nunjucks/sidenav.njk
+++ b/nunjucks/sidenav.njk
@@ -11,20 +11,15 @@
 
             <!-- Sidenav -->
             <div class="sidenav" id="sidenav1">
-                <div class="user-view purple lighten-2 white-text">
-                    <img src="https://picsum.photos/500" alt="" class="circle">
-                    <span>Mudit Somani</span>
-                    <span>xyz@random.mail</span>
-                </div>
-                <ul class="nav-items">
+                <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a href="#!">Item 1</a>
+                        Item 1
                     </li>
                     <li class="nav-item waves-effect">
-                        <a href="#!">Item 2 (with waves)</a>
+                        Item 2 (with waves)
                     </li>
                     <li class="nav-item">
-                        <a href="#!">Item 3</a>
+                        Item 3
                     </li>
                 </ul>
             </div>
