--- a/sass/components/_collapsible.scss
+++ b/sass/components/_collapsible.scss
@@ -16,7 +16,7 @@
 		cursor: pointer;
 		-webkit-tap-highlight-color: transparent;
 		line-height: 1.5;
-		padding: $collapsible-padding;
+		padding: $collapsible-header-padding;
 		background-color: $collapsible-header-bg-color;
 		color: $collapsible-color;
 		transition: 0.8s cubic-bezier(0.075, 0.82, 0.165, 1);
