--- a/nunjucks/chips.njk
+++ b/nunjucks/chips.njk
@@ -46,13 +46,13 @@
             autocomplete: {
                 data: [
                     {
-                        name: "Microsoft"
+                        value: "Microsoft"
                     }, {
-                        name: "Apple"
+                        value: "Apple"
                     }, {
-                        name: "Yahoo",
+                        value: "Yahoo",
                     }, {
-                        name: "Google",
+                        value: "Google",
                     }
                 ]
             }
