--- a/nunjucks/index.njk
+++ b/nunjucks/index.njk
@@ -22,7 +22,9 @@
         <div class="fullscreen flex flex-column align-items-center justify-content-center">
             <div class="container center-align">
                 <br/>
-                <img src="./dist/img/logo.png" alt="empyreal logo" style="width: 200px;"/>
+                <br>
+                <br>
+                <img src="./dist/img/logo.svg" alt="Empyreal logo" style="width: 200px;"/>
                 <h1 class="font-weight-700 display-h2 main-title">
                     Empyreal
                 </h1>
@@ -33,8 +35,9 @@
                     <a href="#!" class="btn btn-large blue waves-effect waves-light">Get Started</a>
                     <a href="#!" class="btn btn-large indigo-outline waves-effect">Download</a>
                 </div>
-                <p class="grey-text">Version
-                    {{version}}</p>
+                <p class="grey-text">
+                Version {{version}}
+                </p>
             </div>
         </div>
         <br/>
