--- a/nunjucks/partials/base.html
+++ b/nunjucks/partials/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         {% include "./metadata.html" %}
-        <link rel="stylesheet" href="./dist/css/empyreal.min.css"/>
+        <link rel="stylesheet" href="./dist/css/empyreal.css"/>
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/prism-theme-one-dark@1.0.0/prism-onedark.css" rel="stylesheet">
         <link rel="stylesheet" href="./dist/css/main.css">
