--- a/nunjucks/snackbar.njk
+++ b/nunjucks/snackbar.njk
@@ -4,5 +4,5 @@
 
 {% block content %}
 <br><br>
-<a href="#!" class="btn" onclick="empyreal.Snackbar({html: 'Hello'})">Hello</a>
+<a href="#!" class="btn" onclick="empy.Snackbar({html: 'Hello'})">Hello</a>
 {% endblock content %}
